# agent-memory

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
admin-frontend/: index.html  package-lock.json  package.json  vite.config.ts
admin-frontend/src/: App.vue  main.ts
admin-frontend/src/components/: AdminLayout.vue
admin-frontend/src/router/: index.ts
admin-frontend/src/stores/: auth.ts  theme.ts
admin-frontend/src/views/: AgentsView.vue  ApiKeysView.vue  DashboardView.vue  LoginView.vue  LogsView.vue  MemoriesView.vue  SettingsView.vue
config/: config.example.yaml  permissions.example.yaml
docs/: api.md  architecture.md  deployment.md  development.md  mcp.md  permissions.md  protocol-parity.md  release-checklist.md
docs/roadmaps/: 2026-05-14-agent-memory-roadmap.md
examples/: hermes_agent.md  mcp_stdio_client.py  rest_client.py
src/memory_mcp/: __init__.py  config.py  main.py  mcp_runtime.py  models.py
tests/: test_acl.py  test_admin.py  test_admin_api_keys.py  test_admin_api_keys_frontend.py  test_admin_frontend_optimization.py  test_admin_integration_workflow.py  test_admin_logger.py  test_admin_logs_dashboard.py  test_admin_memories.py  test_auth_middleware.py  test_config.py  test_evolution.py  test_index.py  test_main.py  test_main_acl_loading.py  test_mcp.py  test_mcp_runtime.py  test_memory_engine.py  test_models.py  test_protocol_parity.py  test_redis_backend.py  test_rest.py  test_search.py
(+60 files in other folders)
